test/syc/bad/conflqualconst.c
/*
 * Conflicting type '^const int' for 'i', previously declared as '^int'.
 */

int *i;
const int *i;
